  and minor GC triggers more reliable, at the cost of a small slowdown.
  (Xavier Leroy, review by Nicolás Ojeda Bär)

- #9937: improvements in ARM64 code generation (constants, sign extensions)
  (Xavier Leroy, review by Stephen Dolan)

- #10228: Better code-generation for inlined comparisons
  (Stephen Dolan, review by Alain Frisch and Xavier Leroy)

### Standard library:

- #9533: Added String.starts_with and String.ends_with.
  (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
  Alain Frisch)

- #9582: Add Array.{find_opt,find_map,split,combine}.
  (Nicolás Ojeda Bär, review by Daniel Bünzli and Gabriel Scherer)

* #10169: Use capitalized module names in the Standard Library prefixing scheme
  to match Dune, e.g. Stdlib__String instead of Stdlib__string. This is a
  breaking change only to code which attempted to use the internal names before.
  The Standard Library generated by the Dune rules is now equivalent to the main
  build (the Dune rules still do not generate a distributable compiler).
  (David Allsopp and Mark Shinwell, review by Gabriel Scherer)

### Other libraries:

* #10084: Unix.open_process_args* functions now look up the program in the PATH.
  This was already the case under Windows, but this is now also done under
  Unix. Note that previously the program was interpreted relative to the current
  directory.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Xavier Leroy)

- #10184: Remove expensive debug assertion from dynlink.
  (Leo White, review by David Allsopp and Xavier Leroy)

- #10185: Consider that IPv6 is always enabled on Windows.
  (Antonin Décimo, review by David Allsopp and Xavier Leroy)

### Tools:

- #10139: Remove confusing navigation bar from stdlib documentation.
  Adds a -nonavbar option to ocamldoc, and uses it to improve navigation within
  the reference manual.
  (John Whitington, review by David Allsopp)

### Manual and documentation:
