@@ -84,6 +84,9 @@ Working version
 
 ### Standard library:
 
+- #9448: Add String.empty as dual of Bytes.empty.
+  (David Allsopp, review by Damien Doligez, Gabriel Scherer and others)
+
 - #9533: Added String.starts_with and String.ends_with.
   (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
   Alain Frisch)
